--- a/category.html
+++ b/category.html
@@ -3,12 +3,12 @@
 
 <form action=”” method=”post”>
 
-Please select the age range for child using FLIP.
+Please select the age range for child using FLIP:
 
 <select>
   <option value="infant">Infant</option>
   <option value="toddler">Toddler</option>
-  <option value="preK">PreK</option>
+  <option value="preK">Pre-K</option>
   <option value="K-1st">K-1st</option>
   <option value="2nd-3rd">2nd-3rd</option>
 </select>
