theme drop down
added id's to drop down menus and created a new drop down menu for
themes

--- a/category.html
+++ b/category.html
@@ -5,12 +5,20 @@
 
 Please select the age range for child using FLIP:
 
-<select>
+<select id="choose-age">
   <option value="infant">Infant</option>
   <option value="toddler">Toddler</option>
   <option value="preK">Pre-K</option>
   <option value="K-1st">K-1st</option>
   <option value="2nd-3rd">2nd-3rd</option>
+</select>
+
+<select id="choose-theme">
+  <option value="creative">Creative Expression</option>
+  <option value="language">Language</option>
+  <option value="math">Math</option>
+  <option value="science">Science</option>
+  <option value="senseofself">Sense of Self</option>
 </select>
 
 <input type="submit" value = "Submit">
