--- a/category.html
+++ b/category.html
@@ -4,7 +4,7 @@
 <form action=”” method=”post”>
 
 Please select the age range for child using FLIP:
-
+<br>
 <select id="choose-age">
   <option value="infant">Infant</option>
   <option value="toddler">Toddler</option>
@@ -12,7 +12,9 @@ Please select the age range for child using FLIP:
   <option value="K-1st">K-1st</option>
   <option value="2nd-3rd">2nd-3rd</option>
 </select>
-
+<br>
+Please select the desired book theme:
+<br>
 <select id="choose-theme">
   <option value="creative">Creative Expression</option>
   <option value="language">Language</option>
@@ -20,7 +22,8 @@ Please select the age range for child using FLIP:
   <option value="science">Science</option>
   <option value="senseofself">Sense of Self</option>
 </select>
-
+<br>
+<br>
 <input type="submit" value = "Submit">
 
 </form>
