--- a/category.html
+++ b/category.html
@@ -24,7 +24,7 @@ Please select the desired book theme:
 </select>
 <br>
 <br>
-<input type="submit" value = "Submit">
+<input type="submit" value = "View FLIP kits">
 
 </form>
 
