--- a/book.html
+++ b/book.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Simple Photo Gallery with HTML and JavaScript</title>
+		<title>Ebook Example</title>
 <style>
 div.page {
     position: fixed;
